2004-02-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItemCell.m: (-drawBorderAndBackgroundWithFrame:inView:)
	Let GSDrawFunctions do the border drawing. Removed caching of
	colour class.
	* Source/NSImageCell.m: (-drawWithFrame:inView:) Let
	GSDrawFunctions do the border drawing. 
	
2004-02-10 21:48  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSFont.h: Add cachedScreenFont ivar.
	* Source/NSFont.m: Add GSFontMapKey class and use it to find fonts
	in globalFontMap. Replace newNameWithMatrix function with keyForFont.
	Update callers.
      	(-initWithName:matrix:fix:screenFont:role:): Initialize
	cachedScreenFont.
	(-screenFont): Use cachedScreenFont.

2004-02-09 03:10  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac: Check for X. Add --enable-ungif/--disable-ungif and
	--with-ungif-include/--with-ungif-library options. If the check for
	libungif fails and X was found, check for libungif again, including
	the X libraries. Patch from Kazunobu Kuriyama.
	* configure: Regenerate.

2004-02-08 20:56  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Backout of NSNib modification.
	* Source/NSBundleAdditions.m: ditto.
	* Source/NSNib.m: Commented out some code and private class.

2004-02-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSLayoutManager.m (-drawGlyphsForGlyphRange:atPoint:)
	Replaced explicit colour setting.
	* Source/NSTabView.m: (-drawRect:) Use color constant instead of
	number in DPSsetgray().	

2004-02-08  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDrawFunctions.h: Add two more methods.
	* Source/GSDrawFunctions.m: Evaluate colour names only ones per
	method. Corrected count in drawFramePhoto: and drawButton:. Added
	drawGrayBezel: and drawWhiteBezel:.
	* Source/NSButtonCell.m: (-drawWithFrame:inView:) use
	GSDrawFunctions to draw border.
	* Source/NSTabView.m
	* Source/NSTabViewItem.m
	* Source/NSBundleAdditions.m (NSNibConnector)
	Added keyed decoding. 
