@@ -32,6 +32,8 @@
 #ifndef _GNUstep_H_NSMenuItem
 #define _GNUstep_H_NSMenuItem
 
+#include <Foundation/NSObject.h>
+
 @class NSString;
 
 @class NSMenu;
