@@ -28,6 +28,8 @@
 #ifndef _GNUstep_H_NSUserInterfaceValidation
 #define _GNUstep_H_NSUserInterfaceValidation
 
+#include <objc/objc.h>
+
 @protocol NSValidatedUserInterfaceItem
 
 - (SEL)action;
